@@ -135,6 +135,7 @@ Feature wishes:
 - PR#5329: (Windows) more efficient Unix.select if all fd's are sockets
 - PR#5358: first class modules don't allow "with type" declarations for types
   in sub-modules
+- PR#5397: Filename.temp_dir_name should be mutable
 - PR#5411: new directive for the toplevel: #load_rec
 - PR#5420: Unix.openfile share mode (Windows)
 - PR#5437: warning for useless open statements
